@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.133 2005/04/10 07:11:59 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.134 2005/04/11 19:59:19 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  11 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Finish overhaul of backend partitioning code.
 
   10 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   tidy_partitions() function in GLIStorageDevice. Tweaks to tidy code
